trying to fix the xibo display content